Config basic Alex 100% MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-Rev1toRev4
+default_envs = esp32-s3-Rev5andHigher
 
 ; platformio.ini custom options, reused by lovyanGFX, SDL2 and in OMOTE code
 ; used by all environments
@@ -22,8 +22,8 @@ build_flags =
 	;-- OMOTE -----------------------------------------------------------------
 	-D ENABLE_WIFI_AND_MQTT=1
 	-D ENABLE_KEYBOARD_MQTT=0
-	-D ENABLE_BLUETOOTH=1
-	-D ENABLE_KEYBOARD_BLE=1
+	-D ENABLE_BLUETOOTH=0
+	-D ENABLE_KEYBOARD_BLE=0
 	-D USE_SCENE_SPECIFIC_GUI_LIST=1
 	-D SCR_WIDTH=${env.custom_screen_width}
 	-D SCR_HEIGHT=${env.custom_screen_height}
@@ -145,7 +145,7 @@ build_flags =
 	; 3: rev3 - no special handling needed
 	; 4: rev4 - Switched from ADC battery monitoring to i2c fuel gauge
 	; please select environment esp32-s3 for later hardware revisions!
-	-D OMOTE_HARDWARE_REV=4
+	-D OMOTE_HARDWARE_REV=5
 
 ; use this is for OMOTE hardware revision 5
 [env:esp32-s3-Rev5andHigher]
